# travelplanner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: api_smoke.py
docs/: how-it-works.html  how-it-works.md
examples/: scenarios.py  trip_map.py
tests/: test_attribution.py  test_auto_timetable.py  test_cache.py  test_catalog.py  test_cli.py  test_coupling.py  test_csa.py  test_drive_matrix.py  test_fares.py  test_geo.py  test_geocoding.py  test_geofabrik.py  test_graph_schema.py  test_gtfs.py  test_modes.py  test_openflights.py  test_osm_parse.py  test_pareto.py  test_planner.py  test_query.py  test_region_select.py  test_restrictions.py  test_road_router.py  test_roads.py  test_serialization.py  test_service.py  test_spatial.py  test_speed.py  test_store.py  test_timetable_store.py  test_timezones.py  test_transit_catalog.py  test_trips.py  test_turn_costs.py  test_turn_persist.py  test_turn_routing.py  test_turns.py  test_validation.py  test_validity.py  test_viz.py
travelplanner/: __init__.py  attribution.py  auto_timetable.py  catalog.py  cli.py  fares.py  geo.py  geocoding.py  geofabrik.py  models.py  modes.py  openflights.py  planner.py  roads.py  samples.py  service.py  speed.py  transit_catalog.py  trips.py  viz.py
travelplanner/data/: airports.csv  cities.csv
travelplanner/graph/: __init__.py  query.py  schema.py  validity.py
travelplanner/graph/coupling/: __init__.py  connector.py  planner.py
travelplanner/graph/road/: __init__.py  expanded.py  model.py  osm.py  router.py  spatial.py  store.py  turns.py
travelplanner/graph/scheduled/: __init__.py  csa.py  gtfs.py  model.py  store.py
