[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelplanner"
version = "0.1.0"
description = "Multimodal door-to-door travel planning that prioritizes air travel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Berk Gokden", email = "berkgokden@gmail.com" }]
license = { text = "MIT" }
keywords = ["routing", "multimodal", "travel", "itinerary", "gtfs", "osm",
            "contraction-hierarchies", "connection-scan", "transit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Road layer: customizable contraction hierarchies + OSM ingestion.
# Note: routingkit-cch builds from source (needs a C++17 compiler + OpenMP).
road = ["routingkit-cch>=0.1.3", "osmium>=4.0"]
# Calendar-aware speed models (public holidays via the holidays package).
calendar = ["holidays>=0.40"]

[project.urls]
Homepage = "https://github.com/bgokden/travelplanner"
Repository = "https://github.com/bgokden/travelplanner"
Issues = "https://github.com/bgokden/travelplanner/issues"

[project.scripts]
travelplanner = "travelplanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["travelplanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
