[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelplanner"
version = "0.1.0"
description = "Multimodal door-to-door travel planning that prioritizes air travel"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Berk Gokden", email = "berkgokden@gmail.com" }]
license = { text = "MIT" }
keywords = ["routing", "multimodal", "travel", "itinerary", "gtfs", "osm",
            "contraction-hierarchies", "connection-scan", "transit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
# Everything is a core dependency -- no optional extras. The road engine and
# calendar-aware speed models are always available, so `pip install travelplanner`
# gets the whole package and every feature/test works out of the box.
# Note: routingkit-cch and osmium build from source (C++17 compiler + OpenMP).
dependencies = [
    "routingkit-cch>=0.1.3",
    "osmium>=4.0",
    "holidays>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyflakes>=3.0"]

[project.urls]
Homepage = "https://github.com/bgokden/travelplanner"
Repository = "https://github.com/bgokden/travelplanner"
Issues = "https://github.com/bgokden/travelplanner/issues"

[project.scripts]
travelplanner = "travelplanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["travelplanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
